--- a/plugin.video.illicoweb/changelog.txt
+++ b/plugin.video.illicoweb/changelog.txt
@@ -1,3 +1,7 @@
+[B]2.1.0 | MA | 2017-06-01[/B]
+- Correction des sous-catégories dans les chaînes
+- Support pour Stingray Musique de retour
+
 [B]2.0.3 | MA | 2017-05-18[/B]
 - Supporte toutes les chaînes EN/FR malgré langue sélectionnée dans KODI
 
