--- a/plugin.video.illicoweb/changelog.txt
+++ b/plugin.video.illicoweb/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.1.1 | MA | 2017-06-01[/B]
+- Correction des sous-catégories dans plus de chaînes
+
 [B]2.1.0 | MA | 2017-06-01[/B]
 - Correction des sous-catégories dans les chaînes
 - Support pour Stingray Musique de retour
