--- a/plugin.video.illicoweb/changelog.txt
+++ b/plugin.video.illicoweb/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.1.3 | MA | 2017-07-04[/B]
+- Corrigé liens pour logos des chaînes
+
 [B]2.1.2 | MA | 2017-06-13[/B]
 - Plus de corrections des sous-catégories
 - Corrigé problèmes à jouer certaines émissions
