--- a/plugin.video.illicoweb/changelog.txt
+++ b/plugin.video.illicoweb/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.2.0 | MA | 2017-07-26[/B]
+- Nouvelle méthode d'authentification
+
 [B]2.1.3 | MA | 2017-07-04[/B]
 - Corrigé liens pour logos des chaînes
 
