Correction de l'authentification
ICI Radio-Canada a effectué des changements à la technique
d'authentification, j'ai ajusté le code pour permettre le fonctionnement
normal des abonnés EXTRA

--- a/plugin.infologique.tou.tv/changelog.txt
+++ b/plugin.infologique.tou.tv/changelog.txt
@@ -1,3 +1,6 @@
+2.0.8
+-Correction pour supporter la nouvelle méthode d'authentification de ICI TOU.TV
+
 2.0.7
 - Correction pour supporter les pannes du serveur de ICI TOU.TV
 
