--- a/plugin.video.illicoweb/changelog.txt
+++ b/plugin.video.illicoweb/changelog.txt
@@ -1,4 +1,7 @@
 [B]2.3.2 | MA | 2017-10-24[/B]
+- Supporte nouveaux changements
+
+[B]2.3.2 | MA | 2017-10-24[/B]
 - Correctif de syntaxe pour Android
 
 [B]2.3.1 | MA | 2017-10-24[/B]
