--- a/plugin.infologique.tou.tv/changelog.txt
+++ b/plugin.infologique.tou.tv/changelog.txt
@@ -1,3 +1,7 @@
+5.1.2
+- Fix la lecture des vidéos avec un compte EXTRA
+- Ajouter un peu de performance!
+
 5.1.1
 - Corriger bug python 2 (kodi 18.x)
 
