--- a/plugin.infologique.tou.tv-6.0.2/changelog.txt
+++ b/plugin.infologique.tou.tv-6.0.2/changelog.txt
@@ -1,6 +1,5 @@
-6.1.1
-- Gérer les utilisateurs non-extra, merci @antoyo 
-- Sélectionner automatiquement le flux vidéo compatible, merci @antoyo 
+6.0.2
+- Fix nouvelle sécurité serveur de licence
 
 6.0.1
 - Corriger: Émissions qui ne s'affichent pas avec l'api legacy (v1)
